@@ -1,4 +1,7 @@
 2002-07-14  Don Porter  <dgp@users.sourceforge.net>
+	
+	* library/tcltest/tcltest.tcl:  Corrected errors in handling of
+	  configuration options -constraints and -limitconstraints.
 
 	* README:		Bumped HEAD to version 8.4b2 so we can
 	* generic/tcl.h:	distinguish it from the 8.4b1 release.
